# agentic

./: .aider.chat.history.md  .aider.input.history  .coverage  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AUTHENTICATION_SETUP.md  CLAUDE_CODE_INTEGRATION_SUMMARY.md  CLAUDE_OUTPUT_ENHANCEMENT.md  CLAUDE_OUTPUT_FIX_SUMMARY.md  ENHANCED_AGENT_SELECTION_STRATEGY.md  ERROR_HANDLING_COMPLETE_FIX.md  FINAL_UI_FIX_SUMMARY.md  INSTALL_FIXES.md  PRODUCTION_ROADMAP.md  QUERY_PROGRESS_FIX_SUMMARY.md  README.md  SINGLE_AGENT_QUERY_FIX.md  SWARM_MONITOR_FIX_SUMMARY.md  calculator.py  check_logs.py  debug_complexity.py  diagnose_claude_auth.py  diagnose_monitor_truncation.py  docker-compose.yml  greetings.py  models.py  netlify.toml  package.json  palindrome_checker.py  pyproject.toml  pytest.ini  requirements.txt  setup_agentic.sh  test_agentic_simple.py  test_api_key_integration.py  test_chat_fix.py  test_claude_code_integration.py  test_claude_monitoring.py  (+20 more)
.agentic/: config.yml  project_index.json  state_persistence.db
.agentic/changes/: tracker_state.json
.github/workflows/: ci.yml  main.yml  release.yml
agentic_tests/: meteora_monitor.py
docs/: AGENT_COMPARISON.md  AGENT_HIERARCHY.md  ARCHITECTURE.md  GEMINI_INTEGRATION.md  Phase1.md  Phase2.md  Phase3.md  Phase4.md  Phase5-Summary.md  Phase5.md  Phase6.md  claude-code-cli-flags.md  ml_architecture.md  model_specifications.md  requirements.txt  verification-loop.md
docs/archive/: AIDER_EXPLORATION_FIX.md  CHAT_INTERFACE_JSON_FIX.md  CHAT_LOOP_FIX.md  COORDINATION_ENGINE_FIX_SUMMARY.md  FINAL_ERROR_FIX_SUMMARY.md  QUERY_UI_COMPLETE_FIX_SUMMARY.md  SAFETY_INTEGRATION_SUMMARY.md  SWARM_MONITOR_CARRIAGE_RETURN_FIX.md  SWARM_MONITOR_ERROR_FIX.md  SWARM_MONITOR_FINAL_FIX.md  SWARM_MONITOR_SPAM_FIX.md  TEST_RESULTS_SUMMARY.md
docs/outlines/: CLAUDE.md  CLAUDE_PROJECT.md  CLEANUP_PLAN.md  LANGUAGE_CONTEXT_IMPLEMENTATION.md  RESEARCH_AGENT_PLAN.md
docs/source/: api.rst  architecture.rst  cli.rst  conf.py  contributing.rst  faq.rst  index.rst  installation.rst  phase-6-2-completion.md  quickstart.rst
examples/: claude_memory_template.md  discovery_coordination_example.py  test_gemini_agent.py
examples/frontend-vite/: App.css  package.json
examples/fullstack-sample/: docker-compose.yml  netlify.toml
scripts/: migrate_to_unified_monitor.py
src/: App.js  App.jsx  index.js
src/agentic/: __init__.py  cli.py  cli.py.verify_patch  py.typed
src/components/: AddTodoForm.js
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_coordination_engine_safe.py  test_dependency_graph.py  test_enhanced_project_analyzer.py  test_ml_intent_classifier.py  test_project_analyzer.py  test_shared_memory.py  test_shared_memory_enhanced.py  test_swarm_safety.py
tests/chaos/: test_resilience.py
tests/core/: test_enterprise_features.py  test_hierarchical_agents.py  test_ide_integration.py  test_intelligent_coordinator.py  test_multi_model_provider.py  test_plugin_system.py  test_production_stability.py  test_verification_coordinator.py
tests/e2e/: test_user_scenarios.py
tests/integration/: __init__.py  test_aider_exploration.py  test_workflows.py  (+2 more)
(+107 files in other folders)
